--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,11 +1,3 @@
-:root {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    transition: background-color 200ms linear, color 200ms linear;
-}
-
 @font-face {
     font-family: 'Cascadia Code';
     src: url('/font/CascadiaCode/CascadiaCode.ttf') format('truetype');
@@ -71,10 +63,16 @@
     font-style: italic;
     src: url('/font/CascadiaCode/CascadiaMonoPLItalic.ttf') format('truetype');
 }
-
+:root {
+    box-sizing: border-box;
+}
 
 html, body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding: 0;
+    margin: 0;
     min-height: 100vh;
+    transition: background-color 200ms linear, color 200ms linear;
 }
 
 a {
@@ -144,31 +142,74 @@ a {
     width: 100%;
 }
 
-@media only screen and (min-width: 640px) {
+.mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.type-h1 {
+    font-size: 2rem;
+    line-height: 2.5rem;
+    font-weight: 600;
+}
+
+#html-jsx-conv-container {
+    display: flex;
+    align-items: center;
+    column-gap: 2.0rem;
+}
+
+.textbox {
+    height: 100%;
+    flex: 1;
+    resize: none;
+    overflow-y: auto;
+    overflow-x: hidden;
+    border: 1px solid var(--color-neutral-300);
+    font-family: 'Cascadia Code', Consolas, monospace;
+    border-radius: 0.25rem;
+    padding: 0.25rem 0.5rem;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    /* max-height: 65vh; */
+}
+
+.textbox:focus {
+    outline: none;
+}
+
+.textbox::placeholder {
+    color: var(--color-neutral-400);
+    font-family: 'Cascadia Code';
+    font-weight: 300;
+    font-style: italic;
+}
+
+@media (min-width: 640px) {
     .container {
         width: 640px;
     }
 }
 
-@media only screen and (min-width: 768px) {
+@media (min-width: 768px) {
     .container {
         width: 768px;
     }
 }
 
-@media only screen and (min-width: 1024px) {
+@media (min-width: 1024px) {
     .container {
         width: 1024px;
     }
 }
 
-@media only screen and (min-width: 1280px) {
+@media (min-width: 1280px) {
     .container {
         width: 1280px;
     }
 }
 
-@media only screen and (min-width: 1536px) {
+@media (min-width: 1536px) {
     .container {
         width: 1536px;
     }
