--- a/src/layouts/head.ejs
+++ b/src/layouts/head.ejs
@@ -2,3 +2,4 @@
 <link rel="stylesheet" href="css/tailwindcolors.css">
 <link rel="stylesheet" href="css/index.css">
 <link rel="stylesheet" href="css/prism.css">
+<script src="js/prism.js"></script>
